--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- Bootstrap v5 link -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">    
   <!-- css link -->
-  <link rel="stylesheet" href="css/styles.css">    
+  <link rel="stylesheet" href="styles.css">    
 
   <title>Frontend Mentor | Profile card component</title>
 
